--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUS</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Welcome to the Secret Undying Society</h1>
-    <p>Join or die.</p>
+    <div class="centered">
+      <h1>Welcome to the Secret Undying Society</h1>
+      <p>Join or die.</p>
+      <div clas="links">
+        <a href="#">Careers</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
   </body>
 </html>
