--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUS</title>
+    <link rel="icon" type="image/png" href="assets\favicon.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -11,9 +12,9 @@
       <h1>Welcome to the Secret Undying Society</h1>
       <p>Join or die.</p>
       <div clas="links">
-        <a href="#">Careers</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="pages\careers.html">Careers</a>
+        <a href="pages\about.html">About</a>
+        <a href="pages\contact.html">Contact</a>
       </div>
     </div>
   </body>
