--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="wallpaper"></div>
     <div class="centered">
       <h1>Welcome to the Secret Undying Society</h1>
       <p>Join or die.</p>
+      <img src="assets\logo.png">
       <div clas="links">
         <a href="pages\careers.html">Careers</a>
         <a href="pages\about.html">About</a>
