--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,15 @@
     <div class="wallpaper"></div>
     <div class="centered">
         <h1>ABOUT</h1>
+        <div class="skeleton">
+            <a href="maze\wrong.html">
+                <button>Right</button>
+            </a>
+            <img src="../assets/skeleton.gif">
+            <a href="maze\wrong.html">
+                <button>Left</button>
+            </a>
+        </div>
     </div>
   </body>
 </html>
