--- a/pages/maze/wrong.html
+++ b/pages/maze/wrong.html
@@ -10,16 +10,24 @@
   <body>
     <div class="wallpaper"></div>
     <div class="centered">
-        <h1>KEEP GOING</h1>
+        <h1 id="title">KEEP GOING</h1>
         <div class="skeleton">
             <a href="wrong.html">
-                <button id="left">Right</button>
+                <button id="left"></button>
             </a>
             <img src="..\..\assets\eye.gif">
             <a href="wrong.html">
-                <button id="right">Right</button>
+                <button id="right"></button>
             </a>
+            <script src="maze.js"></script>
+            <script>
+              randomize();
+              console.log('hi');
+            </script>            
         </div>
+        <a href="right.html">
+          <button></button>
+      </a>
     </div>
   </body>
 </html>
