made it lessfun

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <div class="wallpaper"></div>
     <div class="centered">
       <h1>Welcome to the Secret Undying Society</h1>
-      <p>Join or die.</p>
+      <p>Join now!</p>
       <img src="assets\logo.png">
       <div clas="links">
-        <a href="pages\careers.html">Careers</a>
         <a href="pages\about.html">About</a>
-        <a href="pages\contact.html">Contact</a>
       </div>
     </div>
   </body>
