--- a/pages/maze/wrong.html
+++ b/pages/maze/wrong.html
@@ -15,14 +15,13 @@
             <a href="wrong.html">
                 <button id="left"></button>
             </a>
-            <img src="..\..\assets\eye.gif">
+            <img src="..\..\assets\goat.jpg">
             <a href="wrong.html">
                 <button id="right"></button>
             </a>
             <script src="maze.js"></script>
             <script>
               randomize();
-              console.log('hi');
             </script>            
         </div>
         <a href="right.html">
