added goat dancing

--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -11,6 +11,7 @@
     <div class="wallpaper"></div>
     <div class="centered">
         <h1>YOU MADE IT</h1>
+        <img src="..\..\assets\goat.gif">
     </div>
   </body>
 </html>
