--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
             <a href="maze\wrong.html">
                 <button>Right</button>
             </a>
-            <img src="../assets/muffin.jpg">
+            <img src="../assets/goat.gif">
             <a href="maze\wrong.html">
                 <button>Left</button>
             </a>
