--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -10,8 +10,14 @@
   <body>
     <div class="wallpaper"></div>
     <div class="centered">
-        <h1>YOU MADE IT</h1>
-        <img src="..\..\assets\goat.gif">
+        <h1>You Made It</h1>
+        <h2>tech suite 121</h2>
+        <h3>7:30 pm</h3>
+        <img src="..\..\assets\goat.png"><br/>
+        <audio controls autoplay>
+          <source src="..\..\assets\knock.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+        </audio>
     </div>
   </body>
 </html>
