--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUS</title>
-    <link rel="icon" type="image/png" href="assets\favicon.ico">
+    <title>Godfrey and Co.</title>
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1095086121450475591/1100513640433590342/image.png">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="wallpaper"></div>
     <div class="centered">
-      <h1>Welcome to the Secret Undying Society</h1>
+      <h1>Welcome to Godfrey and Co. Music technicians</h1>
       <p>Join now!</p>
-      <img src="assets\logo.png">
+      <img src="https://cdn.discordapp.com/attachments/1095086121450475591/1100513640433590342/image.png">
       <div clas="links">
         <a href="pages\about.html">About</a>
       </div>
