--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -10,9 +10,44 @@
   <body>
     <div class="wallpaper"></div>
     <div class="centered">
-        <h1>You Made It</h1>
-        <h2>tech suite 121</h2>
-        <h3>7:30 pm</h3>
+        <div>
+          <h1>You Made It</h1>
+          <h2>tech suite 121</h2>
+          <h3>7:30 pm</h3>
+          <h1>SUS Meeting</h1>
+          <h3>19 APRIL 2023 / 7:30 PM / LIBRARY TECH SUITE 121</p>
+          <h2>Attendees</h2>
+          <h3>Godfrey, Cierra, Mia, Will, Paul</h3>
+          <h2>Agenda</h2>
+          <h3><b>4/12 Meeting Follow-up</b></h3>
+          <ol>
+            <li>Godfrey’s birthday party was a success, red velvet ice cream was an excellent choice.</li>
+          </ol>
+          <h3><b>New Business</b></h3>
+          <ol>
+            <li>Dr. Kendall E. James (sometimes called Dr. Tuck) was cited in an article referencing WPI alumni increased life expectancy.</li>
+            <li>Construction started on Quad could anger Him.</li>
+            <li>Concerning book found at the library.</li>
+          </ol>
+          <h2>Notes</h2>
+          <ul>
+            <li>Review the knock.</li>
+            <li>Will is going to follow Dr. James around to find out what she knows.</li>
+            <li>Cierra is going to continue monitoring Him, hopefully Dr. James’ investigations won’t disturb Him.</li>
+            <li>Cierra is also on Fountain watch.</li>
+            <li>No worrying visits last week.</li>
+            <li>Mia will look more into the book she found at the library.</li>
+            <li>As always, new members are encouraged to sit in to stay up to date.</li>
+          </ul>
+          <h2>Action Items</h2>
+          <ol>
+            <li>Follow Dr. James.</li>
+            <li>Investigate the book Mia found.</li>
+            <li>Consider new members for next year.</li>
+          <ol>
+          <h2>Next Meeting Agenda</h2>
+          <p>Findings from following Dr. James, and the library book, regular status updates.</p>
+        </div>
         <img src="..\..\assets\goat.png"><br/>
         <audio controls autoplay>
           <source src="..\..\assets\knock.mp3" type="audio/mp3">
