--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -15,38 +15,35 @@
           <h2>tech suite 121</h2>
           <h3>7:30 pm</h3>
           <h1>SUS Meeting</h1>
-          <h3>19 APRIL 2023 / 7:30 PM / LIBRARY TECH SUITE 121</p>
+          <h3>26 APRIL 2023 / 7:30 PM / LIBRARY TECH SUITE 121</h3>
           <h2>Attendees</h2>
-          <h3>Godfrey, Cierra, Mia, Will, Paul</h3>
+          <h3>Godfrey, Cierra, Mia, Will, Paul, Six new recruits</h3>
           <h2>Agenda</h2>
-          <h3><b>4/12 Meeting Follow-up</b></h3>
+          <h3><b>4/19 Meeting Follow-up</b></h3>
           <ol>
-            <li>Godfrey’s birthday party was a success, red velvet ice cream was an excellent choice.</li>
+            <li>Mia took care of the book.</li>
           </ol>
           <h3><b>New Business</b></h3>
           <ol>
-            <li>Dr. Kendall E. James (sometimes called Dr. Tuck) was cited in an article referencing WPI alumni increased life expectancy.</li>
-            <li>Construction started on Quad could anger Him.</li>
-            <li>Concerning book found at the library.</li>
+            <li>Dr. James went missing as of Tuesday (4/25) morning.</li>
+            <img src="..\..\assets\seg.png"><br/>
+            <li>Someone created a blasphemous illustration of Godfrey.</li>
           </ol>
           <h2>Notes</h2>
           <ul>
             <li>Review the knock.</li>
-            <li>Will is going to follow Dr. James around to find out what she knows.</li>
-            <li>Cierra is going to continue monitoring Him, hopefully Dr. James’ investigations won’t disturb Him.</li>
-            <li>Cierra is also on Fountain watch.</li>
-            <li>No worrying visits last week.</li>
-            <li>Mia will look more into the book she found at the library.</li>
+            <li>Cierra is going to continue monitoring Him. Construction on the Quad seems to have only minorly disturbed Him.</li>
+            <li>Cierra and Paul are on Fountain watch.</li>
             <li>As always, new members are encouraged to sit in to stay up to date.</li>
           </ul>
           <h2>Action Items</h2>
           <ol>
-            <li>Follow Dr. James.</li>
-            <li>Investigate the book Mia found.</li>
-            <li>Consider new members for next year.</li>
+            <li>Keep an eye on Dr. James’ research team.</li>
+            <li>Determine who drew the defamation of Godfrey.</li>
           <ol>
           <h2>Next Meeting Agenda</h2>
-          <p>Findings from following Dr. James, and the library book, regular status updates.</p>
+          <p>Findings from following Dr. James’ research team, and regular status updates.</p>
+          <p></br></p>
         </div>
         <img src="..\..\assets\goat.png"><br/>
         <audio controls autoplay>
