Apr 29 meeting update

--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -17,32 +17,34 @@
           <h1>SUS Meeting</h1>
           <h3>26 APRIL 2023 / 7:30 PM / LIBRARY TECH SUITE 121</h3>
           <h2>Attendees</h2>
-          <h3>Godfrey, Cierra, Mia, Will, Paul, Six new recruits</h3>
+          <h3>Thank you. Your bravery and wits saved us.</h3>
           <h2>Agenda</h2>
-          <h3><b>4/19 Meeting Follow-up</b></h3>
+          <h3><b>4/26 Meeting Follow-up</b></h3>
           <ol>
-            <li>Mia took care of the book.</li>
+            <li>I’m so sorry about Dr. James, she didn’t deserve to have her life cut short.</li>
+            <li>She would be incredibly proud of her research team.</li>
           </ol>
           <h3><b>New Business</b></h3>
           <ol>
-            <li>Dr. James went missing as of Tuesday (4/25) morning.</li>
-            <img src="..\..\assets\seg.png"><br/>
-            <li>Someone created a blasphemous illustration of Godfrey.</li>
+            <li>The Secret Undying Society had two tenants: to keep the Fountain of Youth hidden, and the demon Iepmog sealed.</li>
+            <li>The Fountain’s destruction seems to have canceled the effects on whoever drank from it, which ended Godfrey’s miserable life.</li>
+            <li>However, it’s unclear how Iepmog has reacted to this change. We suspect that He has been greatly weakened after relying on the Fountain for so long.</li>
           </ol>
           <h2>Notes</h2>
           <ul>
-            <li>Review the knock.</li>
-            <li>Cierra is going to continue monitoring Him. Construction on the Quad seems to have only minorly disturbed Him.</li>
-            <li>Cierra and Paul are on Fountain watch.</li>
-            <li>As always, new members are encouraged to sit in to stay up to date.</li>
+            <li>Review our purpose. Some are discussing the disbandment of SUS now that our leader is a dust bunny.</li>
+            <li>If this is the last time I write one of these, I would like to express my gratitude.</li>
+            <li>To the friends I’ve made in SUS. Our trust was betrayed, but we can still depend on each other.</li>
+            <li>To the researchers. Your tenacity exposed the truth we didn’t know we were hiding.</li>
+            <li>As always, a new day is upon us. I encourage you to make the most of it.</li>
           </ul>
           <h2>Action Items</h2>
           <ol>
-            <li>Keep an eye on Dr. James’ research team.</li>
-            <li>Determine who drew the defamation of Godfrey.</li>
+            <li>Keep your curiosity alive.</li>
+            <li>High-five whoever the kid that made the hilarious drawing of Godfrey is.</li>
           <ol>
           <h2>Next Meeting Agenda</h2>
-          <p>Findings from following Dr. James’ research team, and regular status updates.</p>
+          <p>If we meet again, I hope we can laugh and share stories instead of keeping secrets among us.</p>
           <p></br></p>
         </div>
         <img src="..\..\assets\goat.png"><br/>
