--- a/pages/maze/right.html
+++ b/pages/maze/right.html
@@ -44,7 +44,7 @@
             <li>High-five whoever the kid that made the hilarious drawing of Godfrey is.</li>
           <ol>
           <h2>Next Meeting Agenda</h2>
-          <p>If we meet again, I hope we can laugh and share stories instead of keeping secrets among us.</p>
+          <p>If we meet again, I hope we can laugh and share stories instead of keeping secrets among us. -Mia ඞ</p>
           <p></br></p>
         </div>
         <img src="..\..\assets\goat.png"><br/>
